 * intaRNA :
   * query/target enumeration swapped, such that seq1 == target in prediction
     and output
 * OutputConstraint : data structure defining all output constraints
   + enum ReportOverlap : 4 possibilities where overlapping is allowed
   + reportMax : max number of (suboptimal) interactions to report
   + reportOverlap : the overlap constraint for reported interactions
 * Predictor :
   * reportMax/reportNonOverlapping replaced by outConstraint
     * predict()
     * initOptima()
     * reportOptima()
 * IndexRange :
   + operator == ()
 * IndexRangeList :
   + operator << ()
 * CommandLineParsing : 
   - outNonOverlapping : replaced by outOverlap
   - isOutNonOverlapping() : obsolete
   - isOutputReportMax() : obsolete
   + outOverlap + validator : overlap encoding
   + getOutputConstraint() : central data structure for output constraints

161213 Martin Mann :
 * PredictorMfe2d :
   * initHybridE : 
     * code optimizations to reduce lookups
 * Predictor* :
   + initOptima()
   + updateOptima()
   + reportOptima()
     = generic optima handling
   - *Mfe() : replaced by *Optima()
   - *MaxPro() : replaced by *Optima()
 * IndexRangeList :
   + overlaps( range r ) : whether or not one of the ranges overlaps with r
   + tests
 * Predictor* :
   * reportOptima( parameters )
 * PredictorMfe :
   + reportedInteractions : index range lists to enable non-overlapping 
     interaction reporting
   + getNextBest() : abstract interface to access the next best non-overlapping
     interaction (based on reportedInteractions)
     -> implemented by all subclasses
   * reportOptima() : now screens for non-overlapping suboptimal interactions
     using getNextBest()
 

161212 Martin Mann :
 * InteractionEnergy* :
   + getES*() : ensemble energy of intramolecular substructures within a given
     sequence interval under the assumption that the region is part of an
     intermolecular multiloop, i.e. contains at least one intramolecular bp