@@ -12,12 +12,14 @@
 
 OutputConstraint::OutputConstraint(
 		  const size_t reportMax
-		, const ReportOverlap reportOverlap)
+		, const ReportOverlap reportOverlap
+		, const E_type deltaE )
  :
 	  reportMax(reportMax)
 	, reportOverlap(reportOverlap)
+	, deltaE(deltaE)
 {
-
+	assert(deltaE >= 0.0);
 }
 
 /////////////////////////////////////////////////////////////////////////////
